--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,3 +1,14 @@
+:root {
+  --primary-black-color:#000000;
+  --primary-white-color:#ffffff;
+  --secondary-text-color:#545454;
+  --tertiary-grey-color:#818181;
+  --main-highlight-color:#FF6B08;
+  --main-error-highlight:#ff001b;
+  --backdrop-grey-txt-color:#8C8C8C;
+  --backdrop-highlight-color:#FF6B01;
+  --footer-bg-color:#F7F7F7;
+}
 html {
     box-sizing: border-box;
   }
