--- a/src/partials/main-page-cards.html
+++ b/src/partials/main-page-cards.html
@@ -1,3 +1,3 @@
-<div class="gallery"></div>
-<!-- FT-06_main-page-container-movie-cards_Serhii-Lekhman -->
-<!-- <img src="/demo.3a1bb503.jpg" alt="" width="320"> -->
+<div class="container">
+  <ul class="gallery card__list"></ul>
+</div>
