--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,7 +3,7 @@
   text-align: center;
 }
 .footer-text {
-  font-family: Roboto, sans-serif;
+  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
