--- a/src/sass/_modalFilmInfo.scss
+++ b/src/sass/_modalFilmInfo.scss
@@ -6,6 +6,10 @@
   width: 100%;
   height: 100%;
   padding: 20px 20px;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.33;
   //   background-color: rgba(128, 128, 128, 0.7);
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(1px);
@@ -26,7 +30,7 @@
     margin: 0;
     padding: 0;
     border: none;
-    background-color: #fff;
+    background-color: white;
   }
 }
 
@@ -40,31 +44,44 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 570px;
-  width: 880px;
-  background-color: #fff;
+  // width: 570px;
+  width: 280px;
+
+  background-color: white;
   ul {
     list-style: none;
+  }
+  @include mq(tablet) {
+    width: 618px;
+  }
+  @include mq(desktop) {
+    width: 880px;
   }
 }
 
 .backdrop_content {
   //   border: 1px solid red;
-  display: grid;
-  grid-template-columns: 400px 360px;
   column-gap: 30px;
   margin: 50px 30px;
   h1 {
     // padding-top: 0;
     margin-top: 0;
   }
+  @include mq(tablet) {
+    display: grid;
+    grid-template-columns: 230px 300px;
+  }
+  @include mq(desktop) {
+    grid-template-columns: 400px 360px;
+  }
 }
 
 .backdrop_modal__info {
   //   margin-left: 0;
   display: grid;
-  grid-template-columns: 100px 200px;
-  column-gap: 50px;
+  grid-template-columns: 70px 100px;
+  column-gap: 40px;
+
   ul {
     padding-left: 0;
     span {
@@ -78,9 +95,21 @@
       margin-bottom: 10px;
     }
   }
+
+  @include mq(tablet) {
+    grid-template-columns: 70px 180px;
+    column-gap: 40px;
+  }
+  @include mq(desktop) {
+    grid-template-columns: 100px 200px;
+    column-gap: 50px;
+  }
 }
 .backdrop_modal__buttons {
-  display: grid;
+  // display: grid;
+
+  font-size: 12px;
+
   grid-template-columns: 150px 150px;
   column-gap: 15px;
   button {
@@ -89,16 +118,65 @@
     border: 1px solid black;
     border-radius: 5px;
     background-color: #fff;
+    width: 136px;
     cursor: pointer;
     &:hover {
       background-color: rgba(255, 107, 1, 1);
       border: none;
+      color: white;
     }
   }
 }
 
 .backdrop_image img {
+  margin-bottom: 30px;
+  height: 356px;
+  width: 240px;
   border-radius: 10px;
-  height: 480px;
-  width: 400px;
+  margin-right: 0px;
+  @include mq(tablet) {
+    margin-bottom: 0px;
+    height: 373px;
+    width: 264px;
+  }
+  @include mq(desktop) {
+    height: 480px;
+    width: 400px;
+  }
+}
+.wrp-btn {
+  display: flex;
+}
+.backdrop_modal__list {
+  color: #8c8c8c;
+  margin-bottom: 20px;
+}
+.backdrop_modal__buttons {
+  display: flex;
+  align-items: flex-end;
+}
+
+.backdrop_modal__title {
+  font-size: 20px;
+  line-height: 1.16;
+  color: black;
+  margin-bottom: 20px;
+  @include mq(tablet) {
+  }
+  @include mq(desktop) {
+    font-size: 30px;
+  }
+}
+
+.backdrop_modal__text {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.backdrop-modal__desk-text {
+  margin-bottom: 20px;
+}
+.backdrop_genres {
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
